Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-7285

ASSERTION in check_for_next_transno

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Blocker Blocker
    • Lustre 2.8.0
    • Lustre 2.8.0
    • None
    • 3
    • 9223372036854775807

      Sep 18 05:52:49 lola-9 kernel: Lustre: soaked-MDT0002: Client 55851a91-4c9e-a52c-2013-6f9bf3d4a8f8 (at 192.168.1.123@o2ib100) reconnecting, waiting for 21 clients in recovery for 2:12
      Sep 18 05:52:49 lola-9 kernel: Lustre: Skipped 104 previous similar messages
      Sep 18 05:53:23 lola-9 kernel: LustreError: 4529:0:(ldlm_lib.c:1826:check_for_next_transno()) ASSERTION( req_transno >= next_transno ) failed: req_transno: 1404455952555, next_transno: 1404455952556
      Sep 18 05:53:23 lola-9 kernel: LustreError: 4529:0:(ldlm_lib.c:1826:check_for_next_transno()) LBUG
      Sep 18 05:53:23 lola-9 kernel: Pid: 4529, comm: tgt_recov
      Sep 18 05:53:23 lola-9 kernel:
      Sep 18 05:53:23 lola-9 kernel: Call Trace:
      Sep 18 05:53:23 lola-9 kernel: [<ffffffffa074c875>] libcfs_debug_dumpstack+0x55/0x80 [libcfs]
      Sep 18 05:53:23 lola-9 kernel: [<ffffffffa074ce77>] lbug_with_loc+0x47/0xb0 [libcfs]
      Sep 18 05:53:23 lola-9 kernel: [<ffffffffa0a8640c>] check_for_next_transno+0x68c/0x6d0 [ptlrpc]
      Sep 18 05:53:23 lola-9 kernel: [<ffffffffa089a6ed>] ? keys_fini+0x16d/0x240 [obdclass]
      Sep 18 05:53:23 lola-9 kernel: [<ffffffffa0a85d80>] ? check_for_next_transno+0x0/0x6d0 [ptlrpc]
      Sep 18 05:53:23 lola-9 kernel: [<ffffffffa0a82883>] target_recovery_overseer+0x93/0x320 [ptlrpc]
      Sep 18 05:53:23 lola-9 kernel: [<ffffffffa0a81000>] ? exp_req_replay_healthy+0x0/0x30 [ptlrpc]
      Sep 18 05:53:23 lola-9 kernel: [<ffffffffa0a89510>] target_recovery_thread+0x6d0/0x2380 [ptlrpc]
      Sep 18 05:53:23 lola-9 kernel: [<ffffffffa0a88e40>] ? target_recovery_thread+0x0/0x2380 [ptlrpc]
      Sep 18 05:53:23 lola-9 kernel: [<ffffffff8109e78e>] kthread+0x9e/0xc0
      Sep 18 05:53:23 lola-9 kernel: [<ffffffff8100c28a>] child_rip+0xa/0x20
      Sep 18 05:53:23 lola-9 kernel: [<ffffffff8109e6f0>] ? kthread+0x0/0xc0
      Sep 18 05:53:23 lola-9 kernel: [<ffffffff8100c280>] ? child_rip+0x0/0x20

            di.wang Di Wang (Inactive)
            di.wang Di Wang (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: